--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -166,15 +166,13 @@ LastLevel=/Game/practice_9
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/practice_9/Ball/BP_Ball.BP_Ball
 OpenAssetsAtExit=/Game/practice_9/P_Caret1.P_Caret1
-OpenAssetsAtExit=/Game/practice_9/bricks/BP_Bricks_Array.BP_Bricks_Array
 
 [ContentBrowserRecent]
-MRUItem0=/Game/practice_9/Ball/ComBomb_ForSket
-MRUItem1=/Game/practice_9/Ball/BP_Kevin_Ball
-MRUItem2=/Game/practice_9/bricks/BP_Bricks_Array
-MRUItem3=/Game/practice_9/P_Caret1
+MRUItem0=/Game/practice_9/P_Caret1
+MRUItem1=/Game/practice_9/Ball/ComBomb_ForSket
+MRUItem2=/Game/practice_9/Ball/BP_Kevin_Ball
+MRUItem3=/Game/practice_9/bricks/BP_Bricks_Array
 MRUItem4=/Game/practice_9/Ball/BP_Ball
 MRUItem5=/Game/practice_8/P_Caret1
 MRUItem6=/Game/practice_8/BP_Blocks
@@ -948,7 +946,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/practice_9/bricks
+ContentBrowserTab1.SelectedPaths=/Game/practice_9
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -2089,6 +2087,7 @@ K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.bricks_array,K2Node_V
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings
 MeshNaniteSettings=
 P_Caret1_C=K2Node_VariableGet.DefaultValueCategory.bricks_array
+K2Node_FunctionEntry=K2Node_VariableGet.DefaultValueCategory.bricks_array
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
